feat(ui): Show zone and record comments in search view

--- a/templates/search.html
+++ b/templates/search.html
@@ -83,6 +83,11 @@
                     <i class="bi bi-arrow-{{ zone_sort_direction == 'ASC' ? 'down' : 'up' }}"></i>
                 {% endif %}
             </th>
+            {% if iface_zone_comments %}
+            <th>
+                {% trans %}Comment{% endtrans %}
+            </th>
+            {% endif %}
             <th></th>
         </tr>
         </thead>
@@ -93,6 +98,9 @@
             <td>{{ zone['type'] }}</td>
             <td>{{ zone['count_records'] }}</td>
             <td>{{ zone['fullname'] }}</td>
+            {% if iface_zone_comments %}
+                <td>{{ zone['comment'] }}</td>
+            {% endif %}
             <td>
                 {% if edit_permission == 'all' or ((edit_permission == 'own' or edit_permission == 'own_as_client') and zone['user_id'] == user_id) %}
                 <a class="btn btn-outline-primary btn-sm"
@@ -190,6 +198,11 @@
                 <i class="bi bi-arrow-{{ record_sort_direction == 'ASC' ? 'down' : 'up' }}"></i>
                 {% endif %}
             </th>
+            {% if iface_record_comments %}
+            <th>
+                {% trans %}Comment{% endtrans %}
+            </th>
+            {% endif %}
             <th></th>
         </tr>
         </thead>
@@ -202,14 +215,17 @@
             <td>{{ record['content'] }}</td>
             <td>{{ record['ttl'] }}</td>
             <td>{{ record['disabled'] }}</td>
+            {% if iface_record_comments %}
+                <td>{{ record['comment'] }}</td>
+            {% endif %}
             <td>
                 {% if edit_permission == 'all' or ((edit_permission == 'own' or edit_permission == 'own_as_client') and record['user_id'] == user_id) %}
                 <a class="btn btn-outline-primary btn-sm"
                    href="index.php?page=edit_record&domain={{ record['domain_id'] }}&id={{ record['id'] }}">
-                    <i class="bi bi-pencil-square"></i> {% trans %}Edit{% endtrans %}</a>
+                    <i class="bi bi-pencil-square"></i> {% if not iface_record_comments %}{% trans %}Edit{% endtrans %}{% endif %}</a>
                 <a class="btn btn-outline-danger btn-sm"
                    href="index.php?page=delete_record&domain={{ record['domain_id'] }}&id={{ record['id'] }}">
-                    <i class="bi bi-trash"></i> {% trans %}Delete{% endtrans %}</a>
+                    <i class="bi bi-trash"></i> {% if not iface_record_comments %}{% trans %}Delete{% endtrans %}{% endif %}</a>
                 {% endif %}
             </td>
         </tr>
