fix(dnssec): update RSASHA1-NSEC3 algorithm name to match PowerDNS format

--- a/templates/dnssec_add_key.html
+++ b/templates/dnssec_add_key.html
@@ -57,7 +57,7 @@
                 <select class="form-select form-select-sm" name="algorithm" required>
                     <option value=""></option>
                     <option value="rsasha1">{{ algorithm_names['rsasha1'] }}</option>
-                    <option value="rsasha1-nsec3">{{ algorithm_names['rsasha1-nsec3'] }}</option>
+                    <option value="rsasha1-nsec3-sha1">{{ algorithm_names['rsasha1-nsec3-sha1'] }}</option>
                     <option value="rsasha256">{{ algorithm_names['rsasha256'] }}</option>
                     <option value="rsasha512">{{ algorithm_names['rsasha512'] }}</option>
                     <option value="ecdsa256">{{ algorithm_names['ecdsa256'] }}</option>
