--- a/templates/edit.html
+++ b/templates/edit.html
@@ -240,7 +240,7 @@
             </td>
             <td>
                 <div id="contentInputContainer{{ r['id'] }}">
-                    <input id="recordContent{{ r['id'] }}" class="form-control form-control-sm" type="text" name="record[{{ r['id'] }}][content]" value="{{ r['content'] }}">
+                    <input id="recordContent{{ r['id'] }}" class="form-control form-control-sm" type="text" name="record[{{ r['id'] }}][content]" value="{{ r['content']|replace({'"': '&quot;'}) }}">
                 </div>
             </td>
             <td><input class="form-control form-control-sm" type="number"
